<resources>
    <string name="app_name">Capstone Chat</string>
    <string name="hint_first_name">Enter your first name…</string>
    <string name="hint_last_name">Enter your last name…</string>
    <string name="hint_email">Enter your email address…</string>
    <string name="hint_confirm_email">Confirm your email address…</string>
    <string name="hint_password">Enter your password…</string>
    <string name="hint_confirm_password">Confirm your password…</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to login?</string>
    <string name="choose_profile_image">Choose a profile image…</string>
    <string name="login">Login</string>
    <string name="need_account">Need an Account?</string>
    <string name="logout">Logout</string>
    <string name="new_message">New Message</string>
    <string name="messages">Messages</string>
    <string name="select_user">Select User</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter message…</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="selected_user_not_found">Could not locate the selected user.</string>
    <string name="latest_messages">Latest Messages</string>
    <string name="add_room">Add Room</string>
    <string name="room_name_message">Add a unique room name.</string>
    <string name="add_a_room_name">Add a room name…</string>
    <string name="private_messages">Private Messages</string>
    <string name="rooms">Rooms</string>
    <string name="edit">Edit</string>
    <string name="bio_enter_a_description">Enter a description of yourself…</string>
    <string name="change_email_address">Edit email</string>
    <string name="change_password">Edit password</string>
    <string name="submit">Submit</string>
    <string name="old_email_address">Enter your old email address…</string>
    <string name="view_your_profile">View your profile</string>
    <string name="search_users">Search users</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="cancel">Cancel</string>
</resources>
