<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_room_add_room"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/add_room"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_room_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/view_your_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_room_search_users"
        android:icon="@drawable/ic_group"
        android:title="@string/search_users"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_room_private_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/private_messages"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_room_logout"
        android:icon="@drawable/ic_lock"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>