<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="20dp"
    tools:context=".activities.room_messages.AddRoomActivity">

    <TextView
        android:id="@+id/add_room_message_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/room_name_message"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_room_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_left_edit_text"
        android:ems="10"
        android:hint="@string/add_a_room_name"
        android:inputType="textPersonName"
        android:maxLength="32"
        android:padding="8sp"
        app:layout_constraintEnd_toStartOf="@+id/add_room_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_room_message_text_view" />

    <ImageButton
        android:id="@+id/add_room_button"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_right_submit_button"
        android:contentDescription="@string/add_room"
        app:layout_constraintBottom_toBottomOf="@+id/add_room_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_room_name_edit_text"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ProgressBar
        android:id="@+id/add_room_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>