<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="20dp"
    tools:context=".activities.auth.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/register_profile_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/register_profile_button"
            app:layout_constraintEnd_toEndOf="@+id/register_profile_button"
            app:layout_constraintStart_toStartOf="@+id/register_profile_button"
            app:layout_constraintTop_toTopOf="@+id/register_profile_button" />

        <Button
            android:id="@+id/register_profile_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/choose_profile_image"
            android:padding="4dp"
            android:text="@string/choose_profile_image"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <info.androidhive.fontawesome.FontTextView
            android:id="@+id/register_first_name_font_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/rounded_font_text"
            android:gravity="center_vertical"
            android:text="@string/fa_user"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/register_first_name_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/register_first_name_edit_text"
            app:solid_icon="true" />

        <EditText
            android:id="@+id/register_first_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/hint_first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_first_name_font_text_view"
            app:layout_constraintTop_toBottomOf="@+id/register_profile_button"
            tools:targetApi="o" />

        <info.androidhive.fontawesome.FontTextView
            android:id="@+id/register_last_name_font_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/rounded_font_text"
            android:gravity="center_vertical"
            android:text="@string/fa_user"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/register_last_name_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/register_last_name_edit_text"
            app:solid_icon="true" />

        <EditText
            android:id="@+id/register_last_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/hint_last_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_last_name_font_text_view"
            app:layout_constraintTop_toBottomOf="@+id/register_first_name_edit_text"
            tools:targetApi="o" />

        <info.androidhive.fontawesome.FontTextView
            android:id="@+id/register_email_font_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_font_text"
            android:gravity="center_vertical"
            android:text="@string/fa_envelope"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/register_email_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/register_email_edit_text"
            app:solid_icon="true" />

        <EditText
            android:id="@+id/register_email_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/hint_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_email_font_text_view"
            app:layout_constraintTop_toBottomOf="@+id/register_last_name_edit_text"
            tools:targetApi="o" />

        <info.androidhive.fontawesome.FontTextView
            android:id="@+id/edit_email_confirm_email_font_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_font_text"
            android:gravity="center_vertical"
            android:text="@string/fa_envelope"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edit_email_confirm_email_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_email_confirm_email_edit_text"
            app:solid_icon="true" />

        <EditText
            android:id="@+id/edit_email_confirm_email_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/hint_confirm_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_email_confirm_email_font_text_view"
            app:layout_constraintTop_toBottomOf="@+id/register_email_edit_text"
            tools:targetApi="o" />

        <info.androidhive.fontawesome.FontTextView
            android:id="@+id/register_password_font_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_font_text"
            android:gravity="center_vertical"
            android:text="@string/fa_lock_solid"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/register_password_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/register_password_edit_text"
            app:solid_icon="true" />

        <EditText
            android:id="@+id/register_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_email_confirm_email_font_text_view"
            app:layout_constraintTop_toBottomOf="@+id/edit_email_confirm_email_edit_text"
            tools:targetApi="o" />

        <info.androidhive.fontawesome.FontTextView
            android:id="@+id/register_confirm_password_font_text_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_font_text"
            android:gravity="center_vertical"
            android:text="@string/fa_lock_solid"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/register_confirm_password_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/register_confirm_password_edit_text"
            app:solid_icon="true" />

        <EditText
            android:id="@+id/register_confirm_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/hint_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_confirm_password_font_text_view"
            app:layout_constraintTop_toBottomOf="@+id/register_password_edit_text"
            tools:targetApi="o" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_submit_button"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_confirm_password_edit_text" />

        <TextView
            android:id="@+id/register_to_login_text_view"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/back_to_login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

        <ProgressBar
            android:id="@+id/register_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>